Fixed High Scores CSS. Flex-flow wrap, and margins.

--- a/stylesheets/game.css
+++ b/stylesheets/game.css
@@ -66,7 +66,7 @@ header
 
 .high-scores
 {
-    margin: 15px 0;
+    margin: 10px 0;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -78,6 +78,7 @@ header
 {
     width: 70%;
     display: flex;
+    flex-flow: wrap;
     justify-content: center;
     font-family: Walter Turncoat, Arial;
 }
@@ -95,7 +96,7 @@ header
     display: flex;
     flex-direction: column;
     text-align: center;
-    margin: 0 10px;
+    margin: 5px 10px 10px;
     background-color: rgb(104, 185, 218);
     padding: 8px 11px;
     box-shadow: 0 1px 3px white;
